# backend/openapi.yaml
@@ -391,29 +391,6 @@ paths:
 
   /users:
     x-ogen-operation-group: Users
-    get:
-      operationId: getIdByUsername
-      summary: Get id by username
-      parameters:
-        - name: username
-          in: query
-          required: true
-          schema:
-            type: string
-      responses:
-        200:
-          description: User sent successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/BaseEntity'
-        400:
-          $ref: '#/components/responses/BadRequest'
-        404:
-          $ref: '#/components/responses/NotFound'
-        500:
-          $ref: '#/components/responses/InternalServerError'
-
     post:
       operationId: createUser
       summary: Create a new user
@@ -850,18 +827,16 @@ components:
     CreateTransaction:
       type: object
       required:
-        - sender_id
-        - receiver_id
+        - sender_username
+        - receiver_username
         - amount
         - type
       properties:
-        sender_id:
-          type: integer
-          format: int64
+        sender_username:
+          type: string
 
-        receiver_id:
-          type: integer
-          format: int64
+        receiver_username:
+          type: string
 
         amount:
           type: number
